--- a/styles.css
+++ b/styles.css
@@ -852,7 +852,7 @@ footer{
 	color: #FF614B;
 	text-shadow: 1.5px 1.5px white, 2px 2px #000000;
 }
-  
+
 .slider a {
 	display: inline-flex;
 	width: 18%;
@@ -903,6 +903,13 @@ footer{
 	margin-bottom: 60px;
 	max-width: 100vw;
 	overflow: hidden;
+}
+
+.contact-content{
+	width: 100vw;
+	left: 0;
+	overflow: hidden;
+
 }
 
 @keyframes idle {
